add APIS: GET users/me, PUT users/me and POST users/avatar
